@@ -11,12 +11,10 @@ LIB = $(ARCH)/$(LIBNAME).a
 C_FILES = mc68681.c mc68681_baud.c mc68681_reg.c mc68681_reg2.c \
     mc68681_reg4.c mc68681_reg8.c ns16550.c z85c30.c z85c30_reg.c serprobe.c \
     termios_baud2index.c termios_baud2num.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 noinst_HEADERS = mc68681_p.h ns16550_p.h z85c30_p.h
 include_libchip_HEADERS = mc68681.h ns16550.h z85c30.h serial.h sersupp.h
-
-OBJS = $(C_O_FILES)
 
 include $(top_srcdir)/../../../automake/compile.am
 include $(top_srcdir)/../../../automake/lib.am
