@@ -1,3 +1,9 @@
+2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* network/Makefile.am: Eliminate C_O_FILES.
+	* rtc/Makefile.am: Ditto.
+	* serial/Makefile.am: Ditto,
+
 2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* serial/Makefile.am: Don't include @RTEMS_BSP@.cfg.
